--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,12 +1,3 @@
 <h1>Events calendar</h1>
 
-<%= link_to 'Create event' %>
-
-<% @events.each do |event|%>
-  <ul><%= event.title %></ul>
-    <li><%= event.description %></li>
-    <li><%= event.teacher %></li>
-    <li><%= event.start_date %></li>
-    <li><%= event.end_date  %></li>
-  </ul>
-<% end %>
+<div id="calendar"></div>
