events added to calendar

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,8 @@
 <h1>Events calendar</h1>
 
 <div id="calendar"></div>
+<script>
+$('#calendar').fullCalendar({
+  events: '/events.json'
+})
+</script>
