--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,7 @@
 <h1>Events calendar</h1>
 
+  <div id='event_form'>
+    <%= render partial: 'new_event', locals: { event: @event } %>
+  </div>
+
 <div id="calendar"></div>
