Styling added to calendar page

--- a/app/views/events/_new_event.html.erb
+++ b/app/views/events/_new_event.html.erb
@@ -1,8 +1,8 @@
 <%= form_with model: event do |form| %>
-  <%= form.text_field :title %>
-  <%= form.text_field :description %>
-  <%= form.text_field :teacher %>
+  <%= form.text_field :title, :placeholder => 'Title'  %>
+  <%= form.text_field :description, :placeholder => 'Description'   %>
+  <%= form.text_field :teacher, :placeholder => 'Teacher'   %>
   <%= form.date_field :start_date %>
   <%= form.date_field :end_date %>
-  <%= form.submit %>
+  <%= form.submit 'Create event!' %>
 <% end %>
