--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,9 @@
-<h1>Events calendar</h1>
+<div id="calendar-container">
+  <h1>Events calendar</h1>
 
-  <div id='event_form'>
-    <%= render partial: 'new_event', locals: { event: @event } %>
-  </div>
+    <div id='calendar-form'>
+      <%= render partial: 'new_event', locals: { event: @event } %>
+    </div>
 
-<div id="calendar"></div>
+  <div id="calendar"></div>
+</div>
