--- a/app/views/events/create.js.erb
+++ b/app/views/events/create.js.erb
@@ -1,5 +1,4 @@
-$('#new_event').html("<%= j render partial: 'new_event', locals: { event: Event.new } %>")
-$('#calendar').fullCalendar(
+$('calendar').fullCalendar(
   'renderEvent',
   $.parseJSON("<%=j render(@event, format: :json).html_safe %>"),
   true
