--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Events calendar</h1>
 
     <div id='calendar-form'>
-      <%= render partial: 'new_event', locals: { event: @event } %>
+      <%= render partial: 'events/new_event', locals: { event: @event } %>
     </div>
 
   <div id="calendar"></div>
