Calendar reload upon event creation added

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,8 @@
 <div id="calendar-container">
-  <h1>Events calendar</h1>
+  <h1>Events Calendar</h1>
 
     <div id='calendar-form'>
-      <%= render partial: 'events/new_event', locals: { event: @event } %>
+      <%= render partial: 'new_event', locals: { event: @event } %>
     </div>
 
   <div id="calendar"></div>
