--- a/app/views/events/_new_event.html.erb
+++ b/app/views/events/_new_event.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: event do |form| %>
+<%= form_with model: event, local: true do |form| %>
   <%= form.text_field :title, :placeholder => 'Title'  %>
   <%= form.text_field :description, :placeholder => 'Description'   %>
   <%= form.text_field :teacher, :placeholder => 'Teacher'   %>
